--- a/Лабораторная работа №1/Задание.md
+++ b/Лабораторная работа №1/Задание.md
@@ -1,6 +1,6 @@
 ## Лабораторная работа №1 "Перенос файла между компьютерами в локальной сети"
 _____
-При выполнении данной лабораторной работы мы использовали VirtualBox(Ubuntu), поскольку у членов команд не нашлось девайсов с опрационными системами на Linux/MacOs.
+При выполнении данной лабораторной работы мы использовали VirtualBox(Ubuntu), поскольку у членов команды не нашлось девайсов с операционными системами на Linux/MacOs.
 ______
 Существуют три виртуальные машины: Маша, Наташа, Катя. Между ними настроен такой тип связи как сетевой мост, это гарантирует подключение к одной сети.
 ______
