--- a/Лабораторная работа №1/Задание.md
+++ b/Лабораторная работа №1/Задание.md
@@ -6,7 +6,7 @@ ______
 ______
 1. Компьютер "Маша" будет основным компьютером, именно он будет подключаться к компьютеру "Наташа" и передавать изображение компьютеру "Катя". На виртуальной машине "Маша" находим самое дефолтное изображение.
    ![photo_2023-09-21_16-37-17 (3)](https://github.com/12262004-m/OT-U/assets/112974851/d6b6a200-cc75-4041-b2de-460cd9706ec0)
-2. Открываем cmd и при помощи команды по вычисление ip находим адрес каждой из машин, чтобы в дальнейшем использовать это для подключения.
+2. Открываем cmd и при помощи команды по вычислению ip находим адрес каждой из машин, чтобы в дальнейшем использовать это для подключения.
 
 ```
 ip addr
