--- a/Лабораторная работа №1/Задание со звездочкой.md
+++ b/Лабораторная работа №1/Задание со звездочкой.md
@@ -3,6 +3,7 @@
 ```
 ssh-keygen -t rsa
 ```
+![photo_2023-09-21_21-56-12 (2)](https://github.com/12262004-m/OT-U/assets/112974851/b14c2c48-91ed-4860-8b92-eb9d8b4421f7)
 2. На компьютере появляются два файлика: id_rsa(приватный ключ) и id_rsa.pub(публичный ключ); они хранятся на компьютере "Маша". Для большей надежности мы добавили еще пароль, он будет фигурировать дальше.
 3. Делаем копию ssh-ключа на компьютере "Маша" на сервер при помощи команды
 ```
