Update Задание со звездочкой.md

--- a/Лабораторная работа №1/Задание со звездочкой.md
+++ b/Лабораторная работа №1/Задание со звездочкой.md
@@ -9,6 +9,7 @@ ssh-keygen -t rsa
 ```
 ssh-copy-id *username@ip*
 ```
+![photo_2023-09-21_21-56-12 (2)](https://github.com/12262004-m/OT-U/assets/112974851/b14c2c48-91ed-4860-8b92-eb9d8b4421f7)
 *Ник и ip указываем того компьютера, на сервер которого хотим отправить ssh-ключ, в нашем случае это компьютер "Наташа".*
 
 4. Автоматически ssh-ключ появляется на компьютере "Наташа".
