--- a/Лабораторная работа №1/Задание со звездочкой.md
+++ b/Лабораторная работа №1/Задание со звездочкой.md
@@ -13,7 +13,7 @@ ssh-copy-id *username@ip*
 *Ник и ip указываем того компьютера, на сервер которого хотим отправить ssh-ключ, в нашем случае это компьютер "Наташа".*
 
 4. Автоматически ssh-ключ появляется на компьютере "Наташа".
-
+![photo_2023-09-21_21-48-43](https://github.com/12262004-m/OT-U/assets/112974851/f08f464f-29f2-42ee-9413-17fec51a9b63)
 5. Вводим пароль, чтобы раскрыть приватный ключ и командой отправляем файл на компьютер "Катя".
    
 6. Файлик там появляется, успех! Cheers
