Update Задание со звездочкой.md

--- a/Лабораторная работа №1/Задание со звездочкой.md
+++ b/Лабораторная работа №1/Задание со звездочкой.md
@@ -3,7 +3,8 @@
 ```
 ssh-keygen -t rsa
 ```
-![photo_2023-09-21_16-45-34](https://github.com/12262004-m/OT-U/assets/112974851/3c191e0f-d20e-4513-934f-847a2ebc2294)
+
+
 2. На компьютере появляются два файлика: id_rsa(приватный ключ) и id_rsa.pub(публичный ключ); они хранятся на компьютере "Маша". Для большей надежности мы добавили еще пароль, он будет фигурировать дальше.
 3. Делаем копию ssh-ключа на компьютере "Маша" на сервер при помощи команды
 ```
@@ -15,5 +16,6 @@ ssh-copy-id *username@ip*
 4. Автоматически ssh-ключ появляется на компьютере "Наташа".
 ![photo_2023-09-21_21-48-43](https://github.com/12262004-m/OT-U/assets/112974851/f08f464f-29f2-42ee-9413-17fec51a9b63)
 5. Вводим пароль, чтобы раскрыть приватный ключ и командой отправляем файл на компьютер "Катя".
-![photo_2023-09-21_21-48-43](https://github.com/12262004-m/OT-U/assets/112974851/0ebcb1bf-f729-4694-827f-d524379bb2ff)
+![photo_2023-09-21_21-59-56 (3)](https://github.com/12262004-m/OT-U/assets/112974851/6e8783c0-cdc5-4226-b6b9-7deeea60b975)
+
 6. Файлик там появляется, успех! Cheers💫
