Update Задание со звездочкой.md

--- a/Лабораторная работа №1/Задание со звездочкой.md
+++ b/Лабораторная работа №1/Задание со звездочкой.md
@@ -14,7 +14,8 @@ ssh-copy-id *username@ip*
 *Ник и ip указываем того компьютера, на сервер которого хотим отправить ssh-ключ, в нашем случае это компьютер "Наташа".*
 
 4. Автоматически ssh-ключ появляется на компьютере "Наташа".
-![photo_2023-09-21_21-48-43](https://github.com/12262004-m/OT-U/assets/112974851/f08f464f-29f2-42ee-9413-17fec51a9b63)
+![photo_2023-09-21_21-48-43 (2)](https://github.com/12262004-m/OT-U/assets/112974851/8d551de6-8416-4edc-be5f-39f1276a4f29)
+
 5. Вводим пароль, чтобы раскрыть приватный ключ и командой отправляем файл на компьютер "Катя".
 ![photo_2023-09-21_21-59-56 (3)](https://github.com/12262004-m/OT-U/assets/112974851/6e8783c0-cdc5-4226-b6b9-7deeea60b975)
 
