--- a/lab-3/отчет.md
+++ b/lab-3/отчет.md
@@ -1,6 +1,6 @@
-1. Создали отдельный репозиторий для этой лабораторной, там можно посмотреть все файлы: https://github.com/12262004-m/OT-U-Lab3
-2. В качестве исходных файлов взяты файлы с курса программирования первого курса; файл result.txt, куда записываются результаты работы тестов, изначально пустой.
-3. Через docker-файл запускаем тесты(test.py)
+1. Для выполнения мы создали отдельный репозиторий, там можно посмотреть все файлы: https://github.com/12262004-m/OT-U-Lab3
+2. В качестве исходных файлов были взяты программы на языке Python с курса программирования первого курса (file.py с основным кодом и test.py с созданными тестами для проверки работы функции); result.txt - файл, куда записываются результаты работы тестов.
+3. Через docker-файл запускаем тесты (test.py)
 
 
 4. Результат работы тестов:
