--- a/lab-3/отчет.md
+++ b/lab-3/отчет.md
@@ -1,9 +1,9 @@
 1. Для выполнения мы создали отдельный репозиторий, там можно посмотреть все файлы: https://github.com/12262004-m/OT-U-Lab3
 2. В качестве исходных файлов были взяты программы на языке Python с курса программирования первого курса (file.py с основным кодом и test.py с созданными тестами для проверки работы функции); result.txt - файл, куда записываются результаты работы тестов.
-3. Через docker-файл запускаем тесты (test.py)
+3. Через docker-файл запускаем тесты
 
 
-4. Результат работы тестов:
+4. Результат работы тестов после запуска контейнера:
 
    
     <img width="284" alt="Снимок экрана 2023-11-19 в 18 32 03" src="https://github.com/12262004-m/OT-U/assets/112974851/a8ede671-e443-4f64-afcb-4b0d01aad1ea">
