--- a/lab-3/отчет.md
+++ b/lab-3/отчет.md
@@ -10,7 +10,7 @@
 
 
     
-5.В файле yml содержится базовый набор команд; билдим контейнер, запускаем его, копируем файлы из docker; логинимся на docker hub, используя секреты, и пушим туда наши файлы.
+5. В файле yml содержится базовый набор команд: билдим контейнер, запускаем его, логинимся на docker hub, используя секреты, и пушим туда наши файлы.
    ![image](https://github.com/12262004-m/OT-U/assets/112974851/37abf2e0-cff3-46f5-9d65-b0742efadc8f)
 ![image](https://github.com/12262004-m/OT-U/assets/112974851/5cf146f1-0b9c-4de5-8c70-95087f4dfb02)
 6. 
