--- a/lab-3/отчет.md
+++ b/lab-3/отчет.md
@@ -1,16 +1,21 @@
 1. Для выполнения мы создали отдельный репозиторий, там можно посмотреть все файлы: https://github.com/12262004-m/OT-U-Lab3
 2. В качестве исходных файлов были взяты программы на языке Python с курса программирования первого курса (file.py с основным кодом и test.py с созданными тестами для проверки работы функции); result.txt - файл, куда записываются результаты работы тестов.
-3. Через docker-файл запускаем тесты
+3. В репозитории создает секреты для подключения к docker hub
 
+   ![image](https://github.com/12262004-m/OT-U/assets/112974851/4d79487c-d797-4c27-8399-7f509d01737b)
 
-4. Результат работы тестов после запуска контейнера:
+4. Через docker-файл запускаем тесты
+   
+![image](https://github.com/12262004-m/OT-U/assets/112974851/5cf146f1-0b9c-4de5-8c70-95087f4dfb02)
+
+5. Результат работы тестов после запуска контейнера:
 
    
     <img width="284" alt="Снимок экрана 2023-11-19 в 18 32 03" src="https://github.com/12262004-m/OT-U/assets/112974851/a8ede671-e443-4f64-afcb-4b0d01aad1ea">
 
 
     
-5. В файле yml содержится базовый набор команд: билдим контейнер, запускаем его, логинимся на docker hub, используя секреты, и пушим туда наши файлы.
+6. В файле yml содержится базовый набор команд: билдим контейнер, запускаем его, логинимся на docker hub, используя секреты, и пушим туда наши файлы.
    ![image](https://github.com/12262004-m/OT-U/assets/112974851/37abf2e0-cff3-46f5-9d65-b0742efadc8f)
-![image](https://github.com/12262004-m/OT-U/assets/112974851/5cf146f1-0b9c-4de5-8c70-95087f4dfb02)
-6. 
+
+7. 
