--- a/lab-3/отчет.md
+++ b/lab-3/отчет.md
@@ -17,4 +17,14 @@
 6. В файле yml содержится базовый набор команд: билдим контейнер, запускаем его, логинимся на docker hub, используя секреты, и пушим туда наши файлы.
    ![image](https://github.com/12262004-m/OT-U/assets/112974851/37abf2e0-cff3-46f5-9d65-b0742efadc8f)
 
-7. 
+7. Как мы видим, тесты на github прошли успешно.
+
+![image](https://github.com/12262004-m/OT-U/assets/112974851/d7d3d9f2-d412-4428-8e86-25ae27f747cc)
+
+![image](https://github.com/12262004-m/OT-U/assets/112974851/fa14044d-184a-4b7d-84d7-e3b3e6cb98d3)
+
+
+8. Посмотрим на репозиторий на docker hub, там всё прошло успешно.
+
+   ![image](https://github.com/12262004-m/OT-U/assets/112974851/cd7c8911-da93-4e65-b8b6-c9980bec1484)
+
