--- a/lab-3/отчет.md
+++ b/lab-3/отчет.md
@@ -1,6 +1,6 @@
 1. Для выполнения мы создали отдельный репозиторий, там можно посмотреть все файлы: https://github.com/12262004-m/OT-U-Lab3
 2. В качестве исходных файлов были взяты программы на языке Python с курса программирования первого курса (file.py с основным кодом и test.py с созданными тестами для проверки работы функции); result.txt - файл, куда записываются результаты работы тестов.
-3. В репозитории создает секреты для подключения к docker hub
+3. В репозитории создаем секреты для подключения к docker hub
 
    ![image](https://github.com/12262004-m/OT-U/assets/112974851/4d79487c-d797-4c27-8399-7f509d01737b)
 
