--- a/АналитЛабы/1Лаба.md
+++ b/АналитЛабы/1Лаба.md
@@ -2,5 +2,58 @@
 ## Состав команды: Махоткина Екатерина, Терёшкина Наталья, Шабарина Мария
 
 **Цель работы**: познакомиться с облачными сервисами, понять уровни абстракции над инфраструктурой в облаке, сформировать понимание типов потребления сервисов в сервисной-модели, сопоставить сервисы между разными провайдерами, оценить возможности миграции на отечественные сервисы.
+
 **Дано**: Слепок данных биллинга от провайдера после небольшой обработки в виде SQL-параметров (символ % в начале/конце означает, что перед/после него может стоять любой набор символов), Google с документациями провайдера.
+
+### Ход работы
+
+Скачали файл c частью данных биллинга провайдера, который в самом начале выглядел следующим образом:
+
+Далее приступили к заполнению – для этого классифицировали сервисы по их типам и подтипам:
+**IT TOWER**: показывает устройство/инфраструктуру сервиса, обеспечивающую функционирование услуг (нам встретились, например, AI TOWER, Storage и другие)
+**SERVICE FAMILY**: показывает основной инструмент/функциональную задачу, посредством которых обеспечивается работа услуг (встретились с Thread detection, Messenger и другими)
+**SERVICE TYPE**: показывает различные типы услуг (Примеры: Security service, Long-term data archiving и др.)
+**SERVICE SUB-TYPE**: показывает более конкретный подтип услуги (Cold storage, Cloud storage и др.)
+**SERVICE USAGE TYPE**: показывает категорию использования услуги на основе подтипа (Usage of large AD, Access requests и др.)
+
+### Описание встретившихся Amazon сервисов и их отечественные аналоги. Отечественные аналоги брали преимущественно из документации YandexCloud, где сопоставлялись сервисы Amazon и Yandex:
+
+*AmazonRedshift* - это управляемый сервис, предназначенная для аналитической обработки больших объемов данных, предоставляет масштабируемое хранилище данных и возможность выполнения сложных аналитических запросов.
+*Аналог*: можно было бы использовать Yandex Managed Data Warehouse, который частично соответствует функционалу (т.к. это хранилище, предназначенное для сбора и аналитической обработки исторических данных организации)
+
+*AWSDirectoryService* – это сервис, который предоставляет управление каталогами и идентификационными данными, обеспечивает возможность управления доступом пользователей и разрешений к ресурсам AWS и приложениям как в облачной среде, так и в среде локальных сетей.
+*Аналог*: похожая, но не полная, часть функционала есть у Yandex Identity and Access Management (это сервис идентификации и контроля доступа (авторизации). Вы определяете, кто и какие права имеет на ресурс, а IAM предоставляет доступ в соответствии с ними.)
+
+*AmazonGlacier* – это низкозатратный, долгосрочный, надежный и безопасный сервис хранения, который подходит для резервного копирования и архивирования данных (в особенности для тех данных, к которым требуется редкий доступ и которые необходимо хранить длительное время). 
+*Аналог*: не удалось найти аналог именно с этим функционалом, однако можно взять Yandex Object Storage (масштабируемое облачное хранилище, подходящее как для высоконагруженных проектов, которым нужен быстрый доступ к данным, так и для сайтов с минимальными требованиями к инфраструктуре хранения)
+
+*AmazonS3* - сервис хранения объектов, обеспечивающий высокую производительность, надежность и масштабируемость для хранения и защиты данных. Также, позволяет пользователям хранить и извлекать любые объемы данных в любое время с любого места в интернете.
+*Аналог*: Yandex Object Storage
+
+*AmazonSNS (Simple Notification Service)* - управляемый сервис, который позволяет создавать и управлять уведомлениями. С его помощью разработчики могут легко масштабировать микросервисы и распространять сообщения между разными компонентами без управления дополнительной инфраструктурой.
+*Аналог*: похожий функционал есть у Yandex Message Queue (Сервис очередей для обмена сообщениями между компонентами распределённых приложений и микросервисов)
+
+*AWSCodePipeline* - это сервис непрерывной интеграции и непрерывной поставки, позволяющий автоматизировать процессы сборки, тестирования и развертывания кода, а также легко визуализировать, управлять и отслеживать эти процесс через консоль
+*Аналог*: похожий функционал можно найти при использовании Yandex Managed Service for CI/CD
+
+*AmazonML* - это управляемый сервис машинного обучения, который помогает создавать мощные модели. С его помощью data scientist и разработчики могут обрабатывать данные, создавать модели, развертывать и масштабировать их без создания большой инфраструктуры.
+*Аналог*: Yandex DataSphere (схожий по функционалу сервис для анализа данных, разработки и эксплуатации моделей машинного обучения)
+
+*AmazonPolly* – это это облачный сервис, который преобразует текст в живую речь. С его помощью можно создавать приложения, способствующие увеличению вовлеченности пользователей через генерацию естественного звучащего аудио контента.
+*Аналог*: Yandex SpeechKit
+
+*Amazon Translate* - это облачная служба машинного перевода, предоставляемая, позволяющая создавать приложения для многократного перевода текста между различными языками.
+*Аналог*: Yandex Translate
+
+*Amazon Transcribe* - это управляемый сервис распознавания речи с использованием технологий глубокого обучения, предоставляет возможность автоматического перевода аудио в текст (обеспечивает оцифровку разговоров, конвертацию речи в текстовый формат для последующего анализа и индексацию аудио- и видеофайлов для поиска по ключевым словам).
+*Аналог*: Yandex SpeechKit
+
+Amazon CodeBuild - это сервис непрерывной интеграции, позволяющий автоматизировать процесс сборки приложений, тестирования кода и создания выпусков. Он может интегрироваться с другими сервисами (например, упомянутый выше CodePipeline) и инструментами управления версиями кода, что позволяет создавать гибкие и масштабируемые рабочие процессы непрерывной поставки, поддерживает различные языки программирования, среды выполнения и инструменты сборки, обеспечивая широкие возможности автоматизации сборки приложений.
+*Аналог*: можно использовать Yandex Managed Service for CI/CD, так как он будет иметь схожий функционал
+
+Так выглядит заполненная таблица:
+
+### Вывод
+Цель работы была достигнута и мы также очень активно поработали с документацией. Если говорить о возможностях миграции на отечественные сервисы, то мы сделали вывод, что это будет более менее успешно, так как преимущественная часть сервисов Yandex.Cloud повторяет бОльший функционал соответствующих сервисов Amazon.
+
 
