--- a/АналитЛабы/1Лаба.md
+++ b/АналитЛабы/1Лаба.md
@@ -9,6 +9,8 @@
 
 Скачали файл c частью данных биллинга провайдера, который в самом начале выглядел следующим образом:
 
+![image](https://github.com/12262004-m/OT-U/assets/112974126/7c972d2b-86fa-42d6-9822-0c607e449e63)
+
 Далее приступили к заполнению – для этого классифицировали сервисы по их типам и подтипам:
 
 **IT TOWER**: показывает устройство/инфраструктуру сервиса, обеспечивающую функционирование услуг (нам встретились, например, AI TOWER, Storage и другие)
@@ -79,6 +81,7 @@ Amazon CodeBuild - это сервис непрерывной интеграци
 
 
 Так выглядит заполненная таблица:
+![image](https://github.com/12262004-m/OT-U/assets/112974126/2fa298d5-175f-4b02-85fc-d94330aa0551)
 
 ### Вывод
 Цель работы была достигнута и мы также очень активно поработали с документацией. Если говорить о возможностях миграции на отечественные сервисы, то мы сделали вывод, что это будет более менее успешно, так как преимущественная часть сервисов Yandex.Cloud повторяет бОльший функционал соответствующих сервисов Amazon.
