--- a/АналитЛабы/1Лаба.md
+++ b/АналитЛабы/1Лаба.md
@@ -80,7 +80,7 @@ Amazon CodeBuild - это сервис непрерывной интеграци
 *Аналог*: можно использовать Yandex Managed Service for CI/CD, так как он будет иметь схожий функционал
 
 
-Так выглядит заполненная таблица:
+Так выглядит заполненная таблица (https://github.com/12262004-m/OT-U/blob/main/АналитЛабы/Mapping%20Rules%20AWS%20team%201.xlsx):
 ![image](https://github.com/12262004-m/OT-U/assets/112974126/2fa298d5-175f-4b02-85fc-d94330aa0551)
 
 ### Вывод
