--- a/АналитЛабы/1Лаба.md
+++ b/АналитЛабы/1Лаба.md
@@ -1,5 +1,5 @@
 # 1 вариант Лаба AWS
-## Состав команды: Махоткина Екатерина, Терёшкина Наталья, Шабарина Мария
+## Состав команды: Махоткина Екатерина, Терёшкина Наталья, Шабарина Мария (Три девицы под Windows)
 
 **Цель работы**: познакомиться с облачными сервисами, понять уровни абстракции над инфраструктурой в облаке, сформировать понимание типов потребления сервисов в сервисной-модели, сопоставить сервисы между разными провайдерами, оценить возможности миграции на отечественные сервисы.
 
