--- a/АналитЛабы/Лаба2.md
+++ b/АналитЛабы/Лаба2.md
@@ -4,3 +4,9 @@
 **Цель работы**: познакомиться с облачными сервисами, понять уровни абстракции над инфраструктурой в облаке, сформировать понимание типов потребления сервисов в сервисной-модели, сопоставить сервисы между разными провайдерами, оценить возможности миграции на отечественные сервисы.
 
 **Дано**: Слепок данных биллинга от провайдера после небольшой обработки в виде SQL-параметров (символ % в начале/конце означает, что перед/после него может стоять любой набор символов), Google с документациями провайдера.
+
+### Ход работы
+
+Также, как и в первой работе, скачали файл c частью данных биллинга провайдера, который в самом начале выглядел следующим образом:
+
+![image](https://github.com/12262004-m/OT-U/assets/112974126/1e2e159a-8644-4970-94a8-cfd88b046949)
