--- a/АналитЛабы/Лаба2.md
+++ b/АналитЛабы/Лаба2.md
@@ -10,3 +10,16 @@
 Также, как и в первой работе, скачали файл c частью данных биллинга провайдера, который в самом начале выглядел следующим образом:
 
 ![image](https://github.com/12262004-m/OT-U/assets/112974126/1e2e159a-8644-4970-94a8-cfd88b046949)
+
+### Классификация сервисов по типам и подтипам:
+
+**IT TOWER**: показывает устройство/инфраструктуру сервиса, обеспечивающую функционирование услуг 
+
+**SERVICE FAMILY**: показывает основной инструмент/функциональную задачу, посредством которых обеспечивается работа услуг 
+
+**SERVICE TYPE**: показывает различные типы услуг 
+
+**SERVICE SUB-TYPE**: показывает более конкретный подтип услуги 
+
+**SERVICE USAGE TYPE**: показывает категорию использования услуги на основе подтипа 
+
