--- a/АналитЛабы/Лаба2.md
+++ b/АналитЛабы/Лаба2.md
@@ -23,3 +23,50 @@
 
 **SERVICE USAGE TYPE**: показывает категорию использования услуги на основе подтипа 
 
+### Описание встретившихся Azure сервисов и их отечественные аналоги. 
+Отечественные аналоги брали преимущественно из документации YandexCloud, где сопоставлялись сервисы Azure и Yandex:
+
+*Azure Analysis Services* - это управляемый сервис, который позволяет создавать масштабируемые модели данных для анализа и отчетности. Он предоставляет возможности анализа многомерных данных и моделирования, а также облачный анализ больших объемов информации с помощью технологии OLAP (Online Analytical Processing)
+
+**Аналог**: найти аналог с точным функционалом не удалось, однако можно воспользоваться сервисом с частично схожим функционалом Yandex Managed Service for ClickHouse (быстрая аналитическая база данных с открытым исходным кодом. Идеально подходит для обработки больших данных в реальном времени)
+
+*Azure Data Factory* - это сервис, который предназначен для интеграции данных из различных источников. Он предоставляет возможности создания, планирования и управления рабочими процессами для перемещения и преобразования данных. Также, он обеспечивает поддержку большого количества источников данных, инструменты для построения сложных потоков данных и проведения преобразований, а также облачное хранилище данных для сохранения и обработки информации.
+
+**Аналог**: Yandex Managed Data Factory (схожий функционал)
+
+*Azure Database for PostgreSQL* - представляет собой полностью управляемую базу данных PostgreSQL в облаке, предлагает высокую доступность, масштабируемость и защиту данных для приложений, использующих базу данных PostgreSQL, включает в себя автоматическое резервное копирование, мониторинг
+
+**Аналог**: Yandex Managed Service for PostgreSQL
+
+
+*Azure Business Analytics* - представляет собой полностью управляемую платформу, предназначенную для моделирования данных, анализа данных и создания отчетов. Он предоставляет возможности для интеграции больших объемов данных из различных источников, проведения анализа данных с использованием различных методов и инструментов, таких как машинное обучение, статистический анализ, визуализация данных и другие.
+
+**Аналог**: также не удалось найти полностью подходящий сервис, но можно использовать Yandex DataSphere (облачный сервис для анализа данных, разработки и эксплуатации моделей машинного обучения (ML)), Yandex Managed Data Warehouse (хранилище, предназначенное для сбора и аналитической обработки исторических данных организации)
+
+*Redis Cache* - это высокопроизводительный кэширующий сервис, предоставляющий хранилище данных в памяти для более быстрого доступа к информации. Он основан на технологии Redis, которая позволяет улучшить производительность приложений за счет кэширования данных в оперативной памяти.
+
+**Аналог**: Yandex Managed Service for Redis
+
+*Content Delivery Network (CDN)* - это сервис, предназначенный для эффективной доставки контента пользователям по всему миру. CDN позволяет хранить копии контента на серверах, размещенных в различных географических регионах, что позволяет ускорить загрузку контента, снизить задержки и улучшить общее качество обслуживания.
+
+**Аналог**: Yandex Content Delivery Network (Yandex CDN)
+
+*Azure Cloud Services* - представляет собой платформу облачных вычислений, предоставляющую возможность развертывания, масштабирования и управления приложениями на облачной инфраструктуре, предлагает возможности для управления виртуальными машинами, контейнерами, серверными приложениями и многими другими облачными ресурсами.
+
+**Аналог**: Yandex Compute Cloud (YCC)
+
+*Data Box* - это сервис, предоставляющий удобное решение для миграции больших объемов данных в облако. Azure Data Box позволяет заказать физическое устройство для передачи данных, которое можно использовать для офлайн переноса больших объемов информации в облако Azure. Это устройство подключается к сети и автоматически передает данные в облако, обеспечивая быструю и безопасную передачу информации больших объемов.
+
+**Аналог**: Yandex Data Transfer Appliance
+
+*Key Vault* - это инструмент управления ключами и сертификатами в облачной среде. Он обеспечивает безопасное хранение и управление конфиденциальными данными, такими как пароли, ключи шифрования и сертификаты, а также предоставляет возможности управления доступом к этим данным. Azure Key Vault также позволяет защитить конфиденциальные данные с помощью управляемых служб шифрования и контролировать доступ к ним через разграничение прав.
+
+**Аналог**: Yandex Key Management Service (KMS)
+
+*Scheduler* - представляет собой облачную службу планирования задач, которая позволяет запускать различные задачи по расписанию, такие как вызовы HTTP/S-конечных точек или отправка сообщений на Service Bus. Этот сервис предоставляет возможность автоматизации выполнения задач и процессов в облаке Azure, что позволяет оптимизировать рабочие процессы и упрощать управление приложениями.
+
+**Аналог**: точного аналога не нашли, но в некоторых случаях можно использовать Yandex Tracker (сервис для управления проектами и контроля выполнения задач)
+
+*Sentinel* - это облачная платформа для безопасности и анализа журналов. Она предоставляет возможности мониторинга безопасности, выявления угроз и реагирования на инциденты с использованием искусственного интеллекта и машинного обучения. 
+
+**Аналог**: точного аналога также не нашла, возможно в некоторых случаях можно будет воспользоваться Yandex Cloud DNS
