--- a/АналитЛабы/Лаба2.md
+++ b/АналитЛабы/Лаба2.md
@@ -70,3 +70,12 @@
 *Sentinel* - это облачная платформа для безопасности и анализа журналов. Она предоставляет возможности мониторинга безопасности, выявления угроз и реагирования на инциденты с использованием искусственного интеллекта и машинного обучения. 
 
 **Аналог**: точного аналога также не нашла, возможно в некоторых случаях можно будет воспользоваться Yandex Cloud DNS
+
+Итоговая таблица:
+
+<img width="760" alt="image" src="https://github.com/12262004-m/OT-U/assets/112974126/171c41e3-1dd1-40f5-a0f2-b9f12c3d7eef">
+
+### Вывод
+
+В целом, в этой лабораторной работе нам также удалось достичь поставленной цели. Если говорить о миграции с Azure на Yandex, то это будет менее успешным переходом (нежели с AWS), так как многие сервисы не имеют аналогов с точным функционалом, однако всё еще есть возможность использовать сразу несколько сервисов от Yandex для достижения нужных целей.
+
