--- a/АналитЛабы/Лаба2.md
+++ b/АналитЛабы/Лаба2.md
@@ -71,7 +71,7 @@
 
 **Аналог**: точного аналога также не нашла, возможно в некоторых случаях можно будет воспользоваться Yandex Cloud DNS
 
-Итоговая таблица:
+Итоговая таблица (https://github.com/12262004-m/OT-U/blob/main/АналитЛабы/Таблица_Azure.md):
 
 <img width="760" alt="image" src="https://github.com/12262004-m/OT-U/assets/112974126/171c41e3-1dd1-40f5-a0f2-b9f12c3d7eef">
 
