--- a/АналитЛабы/1Лаба.md
+++ b/АналитЛабы/1Лаба.md
@@ -85,6 +85,6 @@ Amazon CodeBuild - это сервис непрерывной интеграци
 ![image](https://github.com/12262004-m/OT-U/assets/112974126/2fa298d5-175f-4b02-85fc-d94330aa0551)
 
 ### Вывод
-Цель работы была достигнута и мы также очень активно поработали с документацией. Если говорить о возможностях миграции на отечественные сервисы, то мы сделали вывод, что это будет более менее успешно, так как преимущественная часть сервисов Yandex.Cloud повторяет бОльший функционал соответствующих сервисов Amazon.
+Цель работы была достигнута и мы также очень активно поработали с документацией. Если говорить о возможностях миграции на отечественные сервисы, то мы сделали вывод, что это возможно ввиду санкций и прочих ограничений, так как сервисы компании Yandex схожи во многом с Amazon и имеют практически одинаковый функционал.
 
 
