--- a/Экзамен/Ответы.md
+++ b/Экзамен/Ответы.md
@@ -1,5 +1,5 @@
 # Экзамен
-## Состав команды: Махоткина Екатерина, Терёшкина Наталья, Шабарина Мария
+## Состав команды: Махоткина Екатерина, Терёшкина Наталья, Шабарина Мария (Три девицы под Windows)
 
 ### Вопрос №1
 
