--- a/Экзамен/Ответы.md
+++ b/Экзамен/Ответы.md
@@ -1,15 +1,13 @@
-# Экзамен
+# Экзамен 1 вариант
 ## Состав команды: Махоткина Екатерина, Терёшкина Наталья, Шабарина Мария (Три девицы под Windows)
 
-### Вопрос №1
-
-Зачем облаку столько регионов? Зачем там выделяются еще и зоны?
+### Вопрос №1: *Зачем в облаке предусмотрено столько регионов? Зачем там кроме регионов еще и зоны?*
 
 Первая и, пожалуй, самая значимая причина множества регионов - это обеспечение отказоустойчивости ввиду наличия этих самых регионов. Условно, если падает в одном регионе, то всегда можно использовать облако в другом регионе. Помимо этого, близость к клиентам в данном регионе позволяет обеспечить быстроту передачи данных, что позволит обрести/сохранить лояльных клиентов. Также наличие множества регионов может быть обусловлено разными законодательными актами стран; разные требования предъявляется к провайдерам, соответственно, в некоторых странах они вынуждены хранить информацию(например, данные о медицинских исследованиях, интеллектуальной собственности, персональные данные) именно на территории этого государства, поскольку этого требуют законы по хранению данных.
 
 Что касается зон, то они выделяются для в первую очередь для равномерного распределения нагрузки, что оберегает от сбоев и технических неполадок, повышают производительность. Также обеспечивается отказоустойчивость.
 
-### Вопрос №2
+### Вопрос №2: *Апрель 2020 года, ваша команда выиграла дорогостоящий тендер на разработку системы пропусков во время карантина. Предложите сервисы в облаке, которые могло бы использовать такое приложение. Можно на конкретных примерах провайдеров (AWS, Azure, Google, Yandex, VK).*
 
 Для аутентификации можно использовать VK Mini apps либо Yandex Cloud IAM.
 
